--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, html {
 }
 
 .hero {
-  background: url('your-background-image.jpg') no-repeat center center fixed;
+  background: url('IMG_2505.jpeg') no-repeat center center fixed;
   background-size: cover;
   height: 100%;
   position: relative;
