--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body, html {
   height: 100%;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Space Mono', monospace;
   background-color: #000;
   overflow-x: hidden;
 }
