--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 /* Reset & Base */
 
+body { border: 10px solid red !important; }
+
+/* Reset & Base */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 - {
   margin: 0;
   padding: 0;
