--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ visibility: visible;
 
 .music-page::before {
   content: '';
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
