--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ left: 0;
 width: 100%;
 height: 100vh;
 background: linear-gradient(135deg, #111 0%, #000 100%);
-background-image: url('https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?w=1920&h=1080&fit=crop');
+background-image: url('IMG_2505.jpeg');
 background-repeat: no-repeat;
 background-position: center center;
 background-size: cover;
