--- a/style.css
+++ b/style.css
@@ -398,15 +398,15 @@ visibility: visible;
 }
 
 .album-detail::before {
-content: ‘’;
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background: rgba(0, 0, 0, 0.7);
-backdrop-filter: blur(20px);
--webkit-backdrop-filter: blur(20px);
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
 }
 
 .album-detail-content {
