--- a/style.css
+++ b/style.css
@@ -411,9 +411,9 @@ body, html {
   background-size: cover;
   background-position: center;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  padding: 20px;
+  padding: 120px 20px 20px;
 }
 
 .album-detail.active {
