--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ body, html {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  padding: 120px 20px 20px;
+  padding: 20px;
 }
 
 .album-detail.active {
