--- a/style.css
+++ b/style.css
@@ -410,7 +410,7 @@ body, html {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh; 
   background: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(25px);
   -webkit-backdrop-filter: blur(25px);
