--- a/style.css
+++ b/style.css
@@ -406,14 +406,15 @@ body, html {
 
 .album-detail::before {
   content: '';
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  min-height: 100vh; 
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(25px);
   -webkit-backdrop-filter: blur(25px);
+  z-index: -1;
 }
 
 .album-detail-content {
