--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ min-width: 20px;
 /* Hero Page */
 .hero {
 background: linear-gradient(135deg, #111 0%, #000 100%);
-background-image: url(‘IMG_2505.jpeg’);
+background-image: url('IMG_2505.jpeg');
 background-repeat: no-repeat;
 background-position: center center;
 background-size: cover;
@@ -253,7 +253,7 @@ left: 0;
 width: 100%;
 height: 100vh;
 background: linear-gradient(135deg, #111 0%, #000 100%);
-background-image: url(‘IMG_2505.jpeg’);
+background-image: url('IMG_2505.jpeg');
 background-repeat: no-repeat;
 background-position: center center;
 background-size: cover;
