--- a/style.css
+++ b/style.css
@@ -569,8 +569,8 @@ body, html {
   }
 
   .album-detail-artwork {
-    width: min(60vw, 240px);
-    height: min(60vw, 240px);
+    width: min(70vw, 300px); /* Changed from min(60vw, 240px) */
+    height: min(70vw, 300px); /* Larger for tablets too */
   }
 
   .streaming-links {
@@ -675,8 +675,8 @@ body, html {
   }
 
   .album-detail-artwork {
-    width: min(70vw, 200px);
-    height: min(70vw, 200px);
+    width: min(85vw, 280px); /* Changed from min(70vw, 200px) */
+    height: min(85vw, 280px); /* Much larger, using more screen width */
     margin: 0 auto 4vh;
   }
 
